# phishing-detection-engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
checkpoints/: config.yaml
configs/: banks.json
data/explainability/: known_campaigns.json  sample_emails.json
data/transformer/: create_subset.py  download_hf_dataset.py  generate_synthetic_data.py
docs/api/: MODEL_TRAINING_GUIDE.md
docs/explainability/: api_reference.md  explanation_examples.md  user_study_design.md
examples/multi_agent/: basic_usage.py  evaluation.py
experiments/multi_agent/: evaluation.py  evaluation_results.json
grafana/dashboards/: dashboard.yml  phishing-api-dashboard.json
grafana/datasources/: prometheus.yml
load_tests/: config.py  locustfile.py
prometheus/: alerts.yml  prometheus.yml
scripts/: example_prediction.py  generate_sample_features.py  train_transformer.py
scripts/api/: README.md  check_training.py  quick_train_all.py  quick_train_distilbert.py  quick_train_xgboost.py
src/: __init__.py
src/analysis/: __init__.py  correlation.py  importance.py
src/api/: __init__.py  main.py
src/explainability/: cognitive_guidelines.py  domain_mapper.py  narrative_generator.py  shap_extractor.py
src/features/: __init__.py  base.py  content_features.py  financial_features.py  header_features.py  linguistic_features.py  pipeline.py  sender_features.py  structural_features.py  (+1 more)
tests/: test_api.py  test_classical_models.py  test_explainability.py  test_features.py  test_multi_agent.py  test_transformer.py
(+176 files in other folders)
