[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-detection-engine"
version = "0.1.0"
description = "Unified phishing detection engine with feature extraction, model shells, and explainability."
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
